Changes (AMongeMoreno): 

	// DONE 

	- Created management command to sync (update all instances of registered models)
	- Extended DEFAULT_SEO_TITLE to DEFAULT_SEO_TITLES to allow specifying a different
	fallback title for each language (also for DEFAULT_SEO_DESCRIPTION). The fallback language is
	'en', english if not specified otherwise by LANGUAGE attribute in settings.
	- DEFAULT_SEO_TITLES and DEFAULT_SEO_DESCRIPTIONS can also be specifyed at model level, allowing
	to specify a common base title and description for all instances of this model (on each language as well)
	- SEO_DEFAULT_XX -> DEFAULT_SEO_XX
	- Title and description for registered seo models can include variables taken from the instance.
	- Title and description variables that have language alternatives must check for them before fallbacking to default one.
	- Allow commands for specific apps
	- Parameters allowed on urls to specify groups of urls. Generic path can now have parameters using {x} wildcard where x is a number. The value matched for these parameters can also be addressed in the same way from the content of the seo info.
	- Random generated titles and descriptions (only for seo models default).
	- Parameters on foreign keys.
	
	// TO DOC

	- Multiples title/description hardcoded on default and registered models.
	- Allow random titles on generic SeoMetadata (need to define how to determine it).
	- Give access to the whole context (seo_context).
	- Optional ending '/' character


	// TODO
	- add extra metadata 
	- rel alternate languages.
	- Allow including canonical.

	- Fix bugs (lang_code bug)
	- Add better admin (with default lang to compare)

	- Include South migrations
	
	- Cache seo info to optimize.